SONARGO-542 Add CCT to govet external reports (#361)
GitOrigin-RevId: c815ec90119dfd1082f8be7d226ea4baa99bd0bb